--- a/.bowerrc
+++ b/.bowerrc
@@ -1,3 +1,5 @@
 {
-  "directory": "app/bower_components"
+  "directory": "app/bower_components",
+  "proxy" : "http://dgsbruproxyweb:8082/",
+  "https-proxy" : "http://dgsbruproxyweb:8082/"
 }
