--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,8 @@
 {
-  "name": "angular-seed",
-  "description": "A starter project for AngularJS",
+  "name": "scrum_angular",
+  "description": "Coding exercise about scrum done with angularjs",
   "version": "0.0.0",
-  "homepage": "https://github.com/angular/angular-seed",
+  "homepage": "http://localhost:8000/app/index.html",
   "license": "MIT",
   "private": true,
   "dependencies": {
