--- a/bower.json
+++ b/bower.json
@@ -7,12 +7,13 @@
   "private": true,
   "dependencies": {
     "angular": "~1.4.0",
-    "angular-route": "~1.4.0",
     "angular-loader": "~1.4.0",
     "angular-mocks": "~1.4.0",
+    "angular-resource": "~1.3.0",
+    "angular-route": "~1.4.0",
+    "angular-ui-date": "~0.0.8",
     "html5-boilerplate": "~5.2.0",
-    "jquery": "~2.1.4",
-    "angular-resource": "~1.3.0"
+    "jquery": "~2.1.4"
   },
   "resolutions": {
     "angular": "~1.4.0"
