--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,7 @@
     "angular-resource": "~1.3.0",
     "angular-route": "~1.4.0",
     "angular-ui-date": "~0.0.8",
+    "angular-ui-sortable": "~0.13.4",
     "html5-boilerplate": "~5.2.0",
     "jquery": "~2.1.4"
   },
