--- a/.bowerrc
+++ b/.bowerrc
@@ -1,5 +1,3 @@
 {
-  "directory": "app/bower_components",
-  "proxy" : "http://dgsbruproxyweb:8082/",
-  "https-proxy" : "http://dgsbruproxyweb:8082/"
+  "directory": "app/bower_components"
 }
